# fun-rec

./: .env.example  .gitignore  README.md  README_en.md  genindex.html  index.html  objects.inv  pyproject.toml  readme.md  requirements.txt  search.html
DeepRecommendationModel/: DIEN.md  DIN.md  DeepCrossing.md  DeepFM.md  NeuralCF.md  PNN.md  Wide&Deep.md  readme.md  深度学习推荐系统模型搭建基础.md
DeepRecommendationModel/代码/: utils.py
MyCodes/推荐系统基础学习/: 02 协同过滤.ipynb  (+4 more)
RecommandNews/: readme.md  多路召回.ipynb  数据分析.ipynb  特征工程.ipynb  赛题理解+Baseline.ipynb
RecommendationSystemFundamentals/: 01 概述.md  02 协同过滤.md  03 矩阵分解.md  05 Wide&Deep.md  06 GBDT+LR.md  readme.md
_sources/: index.rst.txt
_static/: d2l.css  pygments.css  sphinx_materialdesign_theme.css  sphinx_materialdesign_theme.css.map  sphinx_materialdesign_theme.js  sphinx_materialdesign_theme.js.map
chapter_0_introduction/: 1.outline.html  index.html
chapter_2_ranking/: 0.intro.html  1.wide_and_deep.html  index.html
chapter_3_rerank/: 1.intro.html  2.greedy.html  index.html
chapter_4_trends/: 4.summary.html  index.html
chapter_5_projects/: 0.intro.html  1.baseline.html  2.analysis.html  3.recall.html  4.feature_engineering.html  index.html
chapter_6_interview/: 0.intro.html  1.machine_learning.html  3.trends.html  4.product.html  index.html
chapter_appendix/: word2vec.html
chapter_installation/: index.html
chapter_notation/: index.html
chapter_preface/: index.html
chapter_references/: references.html
code/: DeepFM.py  FM.py  NFM.py
codes/: AFM.py  FM.py  PLE.py  WideNDeep.py
docs/: README.md  _sidebar.md  genindex.html  index.html  objects.inv  search.html  searchindex.js
funrec/: __init__.py  utils.py
web_project/: .env.example  README.md  docker-compose.yaml
web_project/backend/: Makefile  dockerfile  pyproject.toml  pytest.ini
web_project/backend/app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py
web_project/backend/app/api/: __init__.py  deps.py
web_project/backend/app/api/v1/: __init__.py  api.py
web_project/backend/app/api/v1/endpoints/: auth.py  genres.py  health.py  movies.py  people.py  ratings.py  recommendations.py  search.py  stats.py  users.py
web_project/backend/app/core/: __init__.py  auth.py  security.py
web_project/backend/app/services/: __init__.py  elasticsearch_service.py
web_project/backend/offline/: config.py  pipeline.py
web_project/backend/offline/feature/: preprocess_ranking.py  preprocess_retrieval.py
web_project/backend/offline/storage/: local_deploy.py  redis_ingest.py
web_project/backend/offline/training/: train_ranking.py  train_retrieval.py
web_project/backend/online/: pipeline.py
web_project/backend/online/cold_start/: __init__.py  base.py  detector.py  popular.py  preferred_genre.py  service.py  ucb_genre.py
web_project/backend/online/ranking/: __init__.py  base.py  deepfm.py  resource_manager.py  service.py
web_project/backend/online/recall/: __init__.py  base.py  item_based.py  resource_manager.py  service.py  trending.py  youtubednn.py
web_project/backend/online/reranking/: __init__.py  base.py  dispersion.py  service.py
web_project/backend/scripts/: index_movies_elasticsearch.py  ingest_data_to_database.py
(+1012 files in other folders)
