[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "funrec"
version = "0.0.1"
description = ""
readme = "README.md"
license = { text = "CC BY-NC-SA 4.0" }
authors = [
    { name = "Ruyi Luo", email = "ruyiluo@mail.com" },
    { name = "Bo Kang", email = "bokang@mail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "tensorflow==2.13.0",
    "pandas==2.0.3",
    "scikit-learn>=1.3.2",
    "python-dotenv==1.0.1",
    "pyyaml==6.0.2",
    "gensim==4.3.3",
    "tabulate==0.9.0",
    "tqdm==4.67.1",
    "networkx==3.1",
    # 新闻推荐需要
    "seaborn==0.13.2",
    "faiss-cpu==1.7.4",
    "lightgbm==4.6.0",
]

[project.urls]
Homepage = "https://github.com/datawhalechina/fun-rec"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
funrec = ["config/*.yaml", "config/*.py"]
